welcome.lessons.welcome.variables.Variables.scala.error
Variables:4: error: reassignment to val
enCours=true
       ^Variables:10: error: value &&! is not a member of Boolean
if (estSurBiscuit&&!enCours){
                 ^Variables:17: error: reassignment to val
enCours=false 
       ^