welcome.lessons.welcome.variables.Variables.scala.code
var nbPas:Int=0
val enCours:Boolean = false
var dejaFait=0
enCours=true
if (!estSurBiscuit){
  if (enCours){
    avance;nbPas=nbPas+1
  }
}
if (estSurBiscuit&&!enCours){
  prendBiscuit
}
if (dejaFait!=nbPas){
  recule;
  nbPas=nbPas-1
}
enCours=false